# mx-jobs-insights

./: .dockerignore  .gitignore  AGENTS.md  CI_FIX_SUMMARY.md  CI_PRE_PUSH_CHECKLIST.md  Dockerfile  LICENSE  PHASE2_COMPLETE.md  PLAN.md  Phase2_Integration_Plan.json  README.md  mkdocs.yml  pyproject.toml  test_charts.py  tox.toml
.github/workflows/: backfill-historical-reports.yml  ci.yml  cloud-release.yml  phase4-automation.yml  publish-portfolio-site.yml  release-cloud-run-job.yml
codex/: config.toml
docs/: HEATMAP_DESIGN.md  HEATMAP_IMPLEMENTATION_SUMMARY.md  HEATMAP_QUICK_START.md  index.md
docs/codex/: BACKFILL_WORKFLOW.md  STREAMLIT_LOCAL_WORKFLOW.md  index.md  integrations.md  skills.md  subagents.md  tools-and-commands.md
docs/development/: index.md  phase-1-ingest-curate-usage.md  phase-2-report-usage.md  phase-3-site-and-dashboard-usage.md  phase-4-automation-usage.md  phase-5-cloud-usage.md  presentation-policy.md  public-data-policy.md  source-data-contract.md
docs/public/: methodology.md
infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
internal/: index.md  roadmap-history.md
internal/codex/: PRE_PUSH_PREFLIGHT_SKILL.md  STREAMLIT_LAUNCHER_SKILL.md  index.md  integrations.md  (+3 more)
scripts/: backfill_historical_reports.py  make_sample_data.py  run_streamlit_app.py
tests/: conftest.py  presentation_fixtures.py  sample_data.py  test_ci_workflow.py  test_cloud_delivery.py  test_cloud_infra_contract.py  test_cloud_release_workflow.py  test_csv_source_adapter.py  test_geo_charts.py  test_heatmap_design.py  test_ingestion_contract_shell.py  test_pipeline_orchestrator.py  test_publish_workflow.py  test_repo_cleanup_contract.py  test_reporting_pipeline.py  test_site_pipeline.py  test_streamlit_app.py  test_word_cloud.py
(+72 files in other folders)
