[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mx-jobs-insights"
version = "0.1.0"
description = "Bilingual Mexico jobs analytics portfolio powered by LinkedInWebScraper data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Ricardo Garcia Ramirez" },
]
keywords = ["linkedin", "jobs", "analytics", "portfolio", "mexico"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "duckdb>=1.1.3",
]

[project.optional-dependencies]
app = [
  "streamlit>=1.32.0",
]
cloud = [
  "google-cloud-bigquery>=3.31.0",
  "google-cloud-storage>=2.19.0",
]
dev = [
  "build>=1.2.2",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.34",
  "pytest>=8.3.2",
  "ruff>=0.6.9",
  "streamlit>=1.32.0",
  "tox>=4.21.2",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.34",
]

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mexico_linkedin_jobs_portfolio*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "."]
extend-exclude = ["site", "artifacts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM"]



